--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gray-matter": "4.0.3",
     "next": "13.1.2",
+    "next-mdx-remote": "4.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rehype-highlight": "6.0.0"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "autoprefixer": "10.4.13",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "postcss": "8.4.21",
+    "tailwindcss": "3.2.4",
     "typescript": "4.9.4"
   }
 }
