--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -20,6 +18,7 @@
 *.pem
 
 # debug
+package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
