--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-mdx-remote": "4.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "4.7.1",
     "rehype-highlight": "6.0.0"
   },
   "devDependencies": {
@@ -24,6 +25,8 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "postcss": "8.4.21",
+    "prettier": "2.8.3",
+    "prettier-plugin-tailwindcss": "0.2.1",
     "tailwindcss": "3.2.4",
     "typescript": "4.9.4"
   }
