--- a/package.json
+++ b/package.json
@@ -15,18 +15,20 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.7.1",
-    "rehype-highlight": "6.0.0"
+    "rehype-highlight": "6.0.0",
+    "uuid": "9.0.0"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/react": "18.0.26",
+    "@types/uuid": "9.0.1",
     "autoprefixer": "10.4.13",
-    "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "eslint": "8.32.0",
     "postcss": "8.4.21",
-    "prettier": "2.8.3",
     "prettier-plugin-tailwindcss": "0.2.1",
+    "prettier": "2.8.3",
     "tailwindcss": "3.2.4",
     "typescript": "4.9.4"
   }
