--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/og": "0.5.6",
     "gray-matter": "4.0.3",
     "next": "13.1.2",
     "next-mdx-remote": "4.2.1",
