--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gray-matter": "4.0.3",
     "next": "13.1.2",
     "next-mdx-remote": "4.2.1",
+    "next-themes": "0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.7.1",
